loadbalancer.tf
resource "aws_lb" "my_lb" {
  load_balancer_type = "application"
  subnets            = [aws_subnet.public_subnet_1.id, aws_subnet.public_subnet_2.id]

  enable_deletion_protection = false

  tags = {
    Name = "My_lb"
  }
}
